# cweil

SMU Projects/: README.md
SMU Projects/AI/Assignment 3 - Goal Based Agents/: Maze.ipynb
SMU Projects/AI/Assignment 4 - Local Search/: n_queens.ipynb
SMU Projects/AI/Assignment 5 - Games/: assignment_connect4.ipynb
SMU Projects/Algorithm Engineering/Assignment 1/: Assignment 1.docx
SMU Projects/Algorithm Engineering/Assignment 2/: Weil_PA2.docx
SMU Projects/Algorithm Engineering/Final Project/: Weil_Final_Project.docx
SMU Projects/Algorithms/lab-4-heuristic-search-Cweil42-main/: CMakeLists.txt
SMU Projects/Algorithms/lab-4-heuristic-search-Cweil42-main/Code/: HamiltonianAlgorithms.cpp  HamiltonianAlgorithms.h  HamiltonianCircuit.cpp  HamiltonianCircuit.h  Path.cpp  Path.h  fileReader.cpp  fileReader.h  main.cpp  output.cpp  output.h
SMU Projects/Algorithms/lab-4-heuristic-search-Cweil42-main/Data/Graph/: positions.txt
SMU Projects/Algorithms/lab-4-heuristic-search-Cweil42-main/Report/: 100GA.csv  500GA.csv  50SA.csv  Lab 4 Report.docx  ~$DataWithGraphs.xlsx
SMU Projects/Data Structures/CS2341-SearchEngine-Cweil42-master/: .gitignore  AVLTree.h  CMakeLists.txt  Parser.cpp  Parser.h  Processor.cpp  Processor.h  README.md  TreeNode.h  fileRank.cpp  fileRank.h  hashMap.h  hashNode.h  interface.cpp  interface.h  main.cpp  wordIndexes.cpp  wordIndexes.h
SMU Projects/Data Structures/CS2341-SearchEngine-Cweil42-master/lab-1-sorting/: CMakeLists.txt
SMU Projects/Data Structures/CS2341-SearchEngine-Cweil42-master/workflows/: build.yaml
(+176 files in other folders)
